--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <title>32bits</title>
-  </head>
+</head>
   <body>
     <noscript>
       <strong>We're sorry but 32bits doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
